--- a/data_assembly.Rmd
+++ b/data_assembly.Rmd
@@ -306,9 +306,11 @@ write.xlsx(biocycle_fips,"biocycle_data2017clean.xlsx")
 ################################################################
 
 # Read Census Household and Population Data, ready for merge.
- pop10lookup <- load_variables(2010 ,"pl")
- pop10 <- get_decennial(year = 2010, geography="county", variables=c("P001001","H013001"))
- pop10 <- pop10 %>% rename(val = value) %>% 
+pop10lookup <- load_variables(2010 ,"pl")
+pop10 <- get_decennial(year = 2010, geography="county", 
+                       variables=c("P001001","H013001"))
+
+pop10 <- pop10 %>% rename(val = value) %>% 
                      dcast(GEOID + NAME ~ variable) %>%
                      rename(hh = H013001, pop = P001001, county_fips = GEOID)
  
@@ -495,7 +497,8 @@ ghg_to_merge <-  read.csv("mswch4panel_fips.csv")
 
 # Get Unbalanced and Balanced Facilities: Define Balanced as Facility with GHG for 2010-2017.
 
-ghg_to_merge_balanced <- ghg_to_merge %>% 
+ghg_to_merge_balanced <- ghg_to_merge %>%
+                         filter(Total.reported.direct.emissions !=0) %>% # remove zero
                          filter(year %in% c(2010:2017)) %>% 
                          group_by(Facility.Id) %>% 
                          mutate(cnt = n()) %>% filter(cnt == 8) %>% select(-c(cnt))
@@ -507,16 +510,32 @@ ghg_to_merge_unbalanced <- ghg_to_merge %>% filter(year %in% c(2010:2017))
 ##############################################################################################
 
 # Investigate the error:
-fipserror_facs <- ghg_to_merge %>% group_by(Facility.Id) %>% mutate(cnt = length(unique(county_fips))) %>% 
-  filter(cnt >=2) %>% select(year, Facility.Name, Facility.Id, Latitude, Longitude, county_fips)
+fipserror_facs <- ghg_to_merge %>% group_by(Facility.Id) %>% 
+  mutate(cnt = length(unique(county_fips))) %>% 
+  filter(cnt >=2) %>% 
+  select(year, Facility.Name, Facility.Id, Latitude, Longitude, county_fips)
 
 # The Error here is caused by Longitude/Latitude Rounding.
 # 2010 Facilities can sometimes differ in county because of rounding errors versus 2011-2019.
 # I assume that the location hasn't actually changed, and that the 2010 county SHOULD be the 2011-2019 county.
 # By this rule, I apply the majority county to the 2010 rounding error values.
-ghg_to_merge_balanced <- ghg_to_merge_balanced %>% group_by(Facility.Id) %>% mutate(county_fips = Mode(county_fips))
 
-ghg_to_merge_unbalanced <- ghg_to_merge_unbalanced %>% group_by(Facility.Id) %>% mutate(county_fips = Mode(county_fips))
+# While I'm at it, I eliminate facility-years that report 0 emissions. it is either an error, or operations have yet to start.
+ghg_to_merge_balanced <- ghg_to_merge_balanced %>%
+  group_by(Facility.Id) %>% 
+  mutate(county_fips = Mode(county_fips))
+
+ghg_to_merge_unbalanced <- ghg_to_merge_unbalanced %>% 
+  filter(Total.reported.direct.emissions !=0) %>% # Remove zero facilities.
+  group_by(Facility.Id) %>% 
+  mutate(county_fips = Mode(county_fips))
+
+facility_level_balanced <- ghg_to_merge_balanced
+facility_level_unbalanced <- ghg_to_merge_unbalanced
+
+setwd("/Users/DNW/Desktop/ECON 594_595/MA Thesis/Datasets/GHG Emissions and Sinks/Facility Community Level")
+write.xlsx(facility_level_balanced, "facility_level_balanced.xlsx")
+write.xlsx(facility_level_unbalanced, "facility_level_unbalanced.xlsx")
 
 ##############################################
 ### ASIDE FINISHED. CONTINUE MAIN ASSEMBLY ###
@@ -605,8 +624,6 @@ cmp_ <- cmp_ %>%
           filter(FIPS != "08013") %>% # Boulder and others in county
           filter(is.na(CS.Start.Date) == F,
                  is.na(DO.Start.Date) == F) # eliminate if missing start (NA not None)
-
-
 
 # Aggregate compost data to county level.
 cmp_county <- cmp_ %>%
@@ -720,7 +737,7 @@ setwd("/Users/DNW/Desktop/ECON 594_595/MA Thesis/Datasets/GHG Emissions and Sink
 # Read data but ignore observations with 0 values for CH4 (before operation)
 ghg_unbfac_unbcnty <- read.xlsx("countyCH4_unbalancedfac.xlsx") %>% filter(ch4 != 0)
 ghg_bfac <- read.xlsx("countyCH4_balancedfac.xlsx") %>% filter(ch4 != 0)
-ghg_unbfac_bcnty <- read.xlsx("countyCH4_unbalancedfac_balcnty.xlsx") %>% filter(ch4 !=0)
+ghg_unbfac_bcnty <- read.xlsx("countyCH4_unbalancedfac_balcnty.xlsx") %>% filter(ch4 != 0)
 
 # Read Census Data:
 setwd("/Users/DNW/Desktop/ECON 594_595/MA Thesis/Datasets/Census")
